update the jdbc, locale